//
//  JobsConstants.swift
//  SeekJobsTask
//
//  Created by Anup kumar sahu on 24/02/24.
//

import Foundation

enum JobsConstants {
    
    enum TableCellIdentifiers {
        static let jobsTableCell = "jobsCell"
    }
    
    enum textConstants {
        static let jobsTitle = "Active Jobs"
        static let noResponseTitle = "Try Again later"
        static let noResponseDescription = "Something went wrong"
        static let jobsApplied = "Applied"
        static let userProfileText = "Profile"
        static let updatePasswordText = "Update Password"
        static let logoutText = "Logout"
        static let jobsApply = "Apply Job"
        static let jobsDetailTitle = "Job Detail"
    }
    
    enum dataConstants {
        static let itemLimits = 5
    }
}
