...
            navigationController.navigationBar.barTintColor = HexColor.getUIColor(
                AppConstants.UIColors.hexStringBackground
            )
            navigationController.navigationBar.tintColor = UIColor.white
            navigationController.navigationBar.titleTextAttributes = [NSAttributedString.Key.foregroundColor: UIColor.white]
            navigationItem.title = JobsConstants.textConstants.jobsTitle
            navigationController.navigationBar.accessibilityIdentifier = "ActiveJobs"
        }
    }
    
    private func configureProfileNavBarButton() {
        navigationItem.leftBarButtonItem = profileButton
    }
...
