...

    private lazy var passwordTextField: UITextField = {
        let textField = UITextField()
        textField.placeholder = LoginConstants.Login.passwordPlaceholder
        textField.isSecureTextEntry = true
        textField.borderStyle = .roundedRect
        textField.accessibilityIdentifier = "PasswordTextField"
        textField.translatesAutoresizingMaskIntoConstraints = false
        return textField
    }()

    // Create a login button
    private lazy var loginButton: UIButton = {
...
